# snarkjs-bellman

./: .gitignore  Readme.md  run.sh  techstack.md  techstack.yml
circuits/: Factor.circom
prover/: index.js  package-lock.json  package.json  proof_uncompressed.json  utils.js  vkey_uncompressed.json
verifier_rust/: Cargo.toml
verifier_rust/src/: main.rs
verifier_rust/src/parser/: mod.rs
verifier_rust/src/types/: mod.rs
