[package]
name = "verifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bellman = "0.14.0"
bls12_381 = "0.8.0"
ff = "0.13.0"
serde = {version="1.0.163", features=["derive"]}
serde_json = "1.0.96"
